examples/errors/04_runtime_errors.sop
// Soplang Runtime Errors
// Demonstrates errors that occur during program execution

qor("Soplang Runtime Error Examples")
qor("============================")
qor("Uncomment examples one at a time to see specific errors")
qor("")

// Example 1: Undefined variable
// This will cause an error because the variable doesn't exist
// qor(undefinedVariable)

// Example 2: Division by zero
// This will cause an error because division by zero is not allowed
door result = 10 / 0

// Example 3: Modulo by zero
// This will cause an error because modulo by zero is not allowed
// door remainder = 10 % 0

// Example 4: Index out of range
// This will cause an error because the index is outside the valid range
// liis numbers = [1, 2, 3]
// door value = numbers[10]

// Example 5: Property not found
// This will cause an error because the property doesn't exist
// walax person = {name: "Farah"}
// qor(person.age)

// Example 6: Method not found
// This will cause an error because the method doesn't exist
// walax book = {title: "Soplang Programming"}
// book.readChapter()

// Example 7: Undefined function
// This will cause an error because the function doesn't exist
// nonExistentFunction()

// Example 8: Missing arguments
// This will cause an error because not enough arguments are provided
// hawl greet(name, age) {
//     qor("Hello, " + name + "! You are " + age + " years old.")
// }
// greet("Aisha")  // Missing the age argument

// Valid code with try-catch to handle runtime errors safely
// qor("Using try-catch to safely handle potential errors:")
// door x = 10
// door y = 0

// isku_day {
//     door result = x / y
//     qor("This won't print")
// } qabo (errorMsg) {
//     qor("Caught error: " + errorMsg)
// }

// qor("Program continues after catching the error")
